# MusicalHarmonyAnalysis

./: .gitignore  README.md  analyse_from_playlist.py  analyse_music.py  analysis.csv  clustering_analysis.py  pca_analysis.py  plot_analysis.py  plot_from_playlist.py  pyproject.toml  run.sh  spotify_analysis.R
.claude/: settings.local.json
apple2spotify/: README.md  __init__.py  apple_music.py  cli.py  models.py  planner.py  spotify_client.py  utils.py
