[project]
name = "musicalharmonyanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "essentia>=2.1b6.dev1389",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyloudnorm>=0.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "spotipy>=2.25.2",
    "umap-learn>=0.5.11",
]
